# vail

./: DESIGN.md  LICENSE
vail-rs/: Cargo.toml  config.example.toml
vail-rs/migrations/: V2__partition_login_log.sql  V3__partition_operator_log.sql
vail-rs/src/: config.rs  error.rs  lib.rs  main.rs
vail-rs/src/api/: auth.rs  host.rs  mod.rs  sftp.rs
vail-rs/src/db/: migrate.rs  mod.rs
vail-rs/src/db/entities/: mod.rs
vail-rs/src/model/: mod.rs
vail-web/: index.html  package.json  tsconfig.json  vite.config.ts
vail-web/src/: App.svelte  app.css
vail-web/src/lib/: api.ts  auth.ts
vail-web/src/routes/: Dashboard.svelte  Login.svelte
